Modify swagger doc
