# routes/users.js
@@ -4,11 +4,11 @@ const { signUpUser, signInUser, currentUser, addSoftSkills, addTechnicalSkills }
 
 router.post("/users/create-account", signUpUser);
 router.post("/users/login", signInUser);
-router.get("/users/current-user", currentUser);
+// router.get("/users/current-user", currentUser);
 // router.post("/users/add-technical-skills", addTechnicalSkills);
 // router.post("/users/add-soft-skills", addSoftSkills);
 router.put("/users/update-technical-skills", checkToken, addTechnicalSkills);
-router.put("/users/update-soft-skills", addSoftSkills);
+router.put("/users/update-soft-skills", checkToken, addSoftSkills);
 
 
 module.exports = router;
